# review-and-assessment-powered-by-intelligent-documentation

./: .gitignore  .gitlab-ci.yml  AmazonQ.md  LOCAL_DEVELOPMENT.md  README-s3.md  README.md  bin-s3.sh  bin.sh  converse_api_info.json  deploy-s3.yml  deploy.sh  deploy.yml  docker-compose.yml  implementation-plan-final-revised.md  improved-checklist-api-specification.md  instruction.md  python-dependency-management.md  sample_result.json  search_results.json  search_results_claude.json
.amazonq/rules/: backend.md  cdk.md  frontend.md
.clinerules/: cdk.md  frontend.md
.github/workflows/: auto-tag-release.yml  ci.yml  docker.yml
assets/local/: docker-compose.yml
backend/: .env.example  .eslintrc.cjs  .gitignore  .prettierrc.js  Dockerfile  Dockerfile.prisma.lambda  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
backend/docs/: review-backend-implementation-plan.md
backend/prisma/: .env  schema.prisma  seed.ts
backend/src/review-workflow/review-item-processor/: README.md  README_POETRY.md  __init__.py  agent.py  index.py  lambda_function_client.py  lambda_handler.py  pyproject.toml  requirements-locked.txt  requirements.txt  s3_temp_utils.py  update_deps.sh  utils.py
cdk/: AmazonQ.md  cdk.context.json  cdk.json  outputs.json  package-lock.json  package.json
cdk/lib/: beacon-stack.ts  frontend-waf-stack.ts  nag-suppressions.ts  parameter-schema.ts  parameter.ts  rapid-stack.ts
cdk/lib/constructs/mcp-runtime/python/: index.py  pyproject.toml  requirements-locked.txt  requirements.txt  run_mcp_servers_with_aws_lambda-0.2.1.post2.dev0+254672e-py3-none-any.whl
cdk/lib/constructs/mcp-runtime/python/.uv/: setup.cfg
cdk/test/: auth-cognito.test.ts  cdk_init.test.ts  parameter-handling.test.ts
db_schema_design/: README.md
docs/: BEACON-real-estate.xml  README_POETRY.md  architecture-detail.md  bedrock-batch-process.md  cdk-example.ts  design-guide.md  developer-guide.md  github-actions-ci.yml  how_to_deploy.md  prfaq.md  step-functions-implementation.md
docs/en/: README_en.md  developer-guide.md  mcp-features.md
docs/implementation-examples/: SFn-fragments.md  amplify-auth.md  generative-ai-cdk-construct-analyzer.md  generative-ai-cdk-construct.md  lambda-web-adapter.md  nodejsbuild.md  origin-access-identity.md  waf.md
docs/ja/: developer-guide.md  mcp-features.md
docs/tests/: checklist_sample.md  review_sample.md
examples/en/: README.md
examples/ja/: README.md
frontend/: .env.example  .eslintrc.cjs  .prettierrc.json  ThemeAuth.css  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: manifest.webmanifest
frontend/src/: App.css  App.tsx  main.tsx
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
mysql-init/: 01-grant-permissions.sql
prompt_test/: .gitignore  README.md  llm-processing.local.js  package.json
prompt_test/review/: README.md  package-lock.json  package.json
q_dev_tools/: internet.py
samples/: README.md  checklist-sample.csv
scripts/: update-all-python-requirements.sh  update-python-requirements.sh
tasks/: document-upload-refactor.md  frontend-type-refactor.md
tasks/cdk/: lwa_blog.md  lwa_top.md  requirements.md  serverless-db-sample.md
tasks/check-list/: plan.md
(+469 files in other folders)
