[tool.poetry]
name = "review-item-processor"
version = "0.1.0"
description = "Document review processor using strands agent SDK"
authors = ["AWS Samples"]

[tool.poetry.dependencies]
python = "^3.9"
strands-agents = "^0.1.5"
strands-agents-tools = "^0.1.5"
pillow = "^11.2.1"
boto3 = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Local wheel package will be installed manually with:
# poetry run pip install ./run_mcp_servers_with_aws_lambda-0.2.1.post2.dev0+254672e-py3-none-any.whl