[project]
name = "mcp-runtime"
version = "0.1.0"
description = "MCP Runtime for Lambda"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "uv>=0.7.12",
    "mcp-server-time>=0.1.0",
    "boto3>=1.28.0",
    "mcp>=1.9.2",
    "pydantic>=2.11.5",
]

[build-system]
requires = ["uv"]
build-backend = "uv.legacy_wheel"